[package]
name = "elix"
version = "0.1.0"
edition = "2018"
authors = ["Ian Kim <ian@ianmkim.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = {version="0.3.*"}
tokio = {version="1.9.*", features=["full"]}
tokio-util = {version="0.6.3", features=["full"]}
clap = "3.0.0-beta.2"

log = "0.4.*"
env_logger = "0.7.*"

autodiscover-rs = "0.1.0"
byteorder = "1.4.3"
crc32fast = "1.2.1"
discv5="0.1.0-beta.9"
